<resources>
    <string name="app_name">GetFit Unbreakable</string>

    <string name="MainActivityButton1">UNBREAKABLE</string>
    <string name="MainActivityButton2">YOUR LEVEL</string>
    <string name="MainActivityButton3">RECORDS</string>
    <string name="MainActivityButton4">COMMUNITY\nWORKOUTS</string>
    <string name="MainActivityButton5">PROFILE</string>


    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="facebook_app_id">922241857948015</string>
    <string name="fb_login_protocol_scheme">fb922241857948015</string>

</resources>
